--- a/main.css
+++ b/main.css
@@ -125,3 +125,13 @@
     font-size: 1.5rem;
     text-align:center;
 }
+
+@media (max-width: 767px){  
+    #container {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        margin: 0;
+}
+}
